ALLJOYN-2096 Update sample name to Connectionless Chat
Change-Id: Iaa4b1740859de715447c5a38361b40ba3d2c8bdd

--- a/samples/android/sessionless/chat/res/values/strings.xml
+++ b/samples/android/sessionless/chat/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Sessionless Chat</string>
+    <string name="app_name">Connectionless Chat</string>
 
     <string name="enterMessageHint">Enter message</string>
 
